tests/miniJava/neg/000130_mutation.MiniJava
class java { public public int [] java ( ) { return 0 ; } void Main ( String [ ] java ) { { } } }
